--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="container3">
-        <form id="review-form" th:action="@{/reviews/create}" method="post" th:object="${review}" class="card rounded p-4 mb-2">  <!--better using th:object x POST actions-->
+        <form id="review-form" th:action="@{/reviews/create}" method="post" th:object="${review}" class="card rounded p-4 mb-4">  <!--it's better using th:object x POST actions!-->
             
             <!-- <div th:if="${#fields.hasErrors()}">   don't delete this comment
                 <ul class="alert alert-danger">
@@ -65,12 +65,12 @@
                 </ul>
             </div> -->
             
-            <h3 class="fs-2">Post Review</h3>
+            <h3 class="fs-2">Post Anonymous Review</h3>
             <div class="form-group mb-2">
                 <label for="title" class="form-label">Title</label>
-                <input type="text" class="form-control" name="title" id="title" placeholder="Title"
-                th:field="*{title}" th:errorClass="is-invalid">
-                <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}">
+                <input type="text" class="form-control" id="title" placeholder="Title"
+                th:field="*{title}" th:errorClass="is-invalid">  <!--IT'S BETTER USING th:field instead of name&th:value x automatic data binding and spring validations-->
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}">  <!--SHOW ERROR RENDER INVALID FIELD -->
                     <ul>
                         <li th:each="error : ${#fields.errors('title')}" th:text="${error}" />
                     </ul>
@@ -78,7 +78,8 @@
             </div>
             <div class="form-group mb-2">
                 <label for="content" class="form-label">Content</label>
-                <textarea type="text" class="form-control" rows="4" name="content"  id="content" placeholder="Content" th:field="*{content}"></textarea>
+                   <!--Here, filling the field is not mandatory, so th:errorClass is not added. -->
+                <textarea type="text" class="form-control" rows="4"  id="content" placeholder="Content" th:field="*{content}" /> <!--IT'S BETTER USING th:field instead of name&th:value x automatic data binding and spring validations-->
             </div>
             <div class="text-start">
                 <button type="submit" class="btn btn-primary ">Submit</button>
@@ -116,7 +117,7 @@
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                             <form th:action="@{/reviews/delete/{id}(id=${review.id})}" method="post" class="d-inline-block">
-                                                <input type="hidden" name="_method" value="delete" />  <!--spring doesn't accept DELETE in the form, but with POST+ _method&value yes-->
+                                                <input type="hidden" name="_method" value="delete" />  <!--!!spring doesn't accept DELETE in the form, but with POST+ _method&value yes-->
                                                 <button type="submit" class="btn btn-danger">Delete</button>
                                             </form>
                                         </div>
@@ -134,17 +135,18 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <form th:action="@{/reviews/update/{id}(id=${review.id})}" method="post">
-                                                <input type="hidden" name="_method" value="put" />  <!--spring doesn't accept PUT in the form, but with POST+ _method&value yes-->
+                                            <form th:action="@{/reviews/update/{id}(id=${review.id})}" method="post" th:object="${review}">
+                                                <input type="hidden" name="_method" value="put" />  <!--!!spring doesn't accept PUT in the form, but with POST+ _method&value yes-->
+                                                <input type="hidden" th:field="*{pizza}" id="linked-pizza">
                                                 <div class="mb-3">
                                                     <label for="title" class="form-label">Title</label>
-                                                    <input type="text" class="form-control" id="title" name="title" placeholder="Title" th:value="${review.title}"
-                                                        required>
+                                                    <input type="text" class="form-control" id="title" placeholder="Title" th:field="*{title}"  
+                                                        required>   <!--IT'S BETTER USING th:field instead of name&th:value x automatic data binding and spring validations-->
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="content" class="form-label">Content</label>
-                                                    <textarea class="form-control" id="content" name="content" rows="5" placeholder="Content"
-                                                        required>[[${review.content}]]</textarea>
+                                                    <textarea class="form-control" id="content" rows="5" placeholder="Content" th:field="*{content}"
+                                                        required />
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
