--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -36,12 +36,12 @@
         <button class="btn btn-primary">Submit</button>
      </form> 
   
-    
+    <!--all reviews-->
     <article class="mb-2">
         <h2>Reviews</h2>
         <!-- <h3 th:if="${reviews == null}" th:text="|non-existing reviews!|" class="text-muted text-center" /> -->
         <div class="row g-3" th:if="${not #lists.isEmpty(pizza.reviews)}">   
-            <div class="col-sm-6 col-md-4 col-lg-3" th:each="review : ${pizza.reviews}">  <!--!BETTER than reviews.size()>0, if u don't use th:object in the children don't use *{}!!-->
+            <div class="col-sm-6 col-md-4 col-lg-3" th:each="review : ${pizza.reviews}">  <!--!BETTER than th:if="reviews.size()>0", if u don't use th:object in the children don't use *{}!!-->
                 <div class="card bg-gray">
                     <div class="card-body">
                         <h6 class="card-subtitle text-muted" th:text="${review.id}" />
@@ -125,6 +125,29 @@
         </div>
         <h4 th:if="${ #lists.isEmpty(pizza.reviews)}" th:text="|No reviews found.|" class="text-muted text-center" />  <!--replaced ex th:unless -->
     </article>   
+
+    <!--all specialoffers-->
+    <article class="mb-2">
+        <h2>Special Offers</h2>
+        <div class="row g-3" th:if="${not #lists.isEmpty(pizza.specialoffers)}">
+            <div class="col-sm-6 col-md-4 col-lg-3" th:each="specialoffer : ${pizza.specialoffers}">
+                <div class="card bg-warning">
+                    <div class="card-body">
+                        <h6 class="card-subtitle text-muted" th:text="${specialoffer.id}" />
+                        <h5 class="card-title" th:text="${specialoffer.title}" />
+                        <h4 class="card-text" th:text="${specialoffer.startDate}" />
+                        <h4 class="card-text" th:text="${specialoffer.endDate}" />
+
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" th:data-bs-target="'#update-modal-' + ${review.id}">Update</button>
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#delete-modal-' + ${review.id}">Delete</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h4 th:if="${ #lists.isEmpty(pizza.specialoffers)}" th:text="|No specialoffers found.|" class="text-muted text-center" />  <!--replaced ex th:unless -->
+    </article>
+
 
 </div>
 </body>
