--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -48,11 +48,11 @@
                         <h5 class="card-title" th:text="${review.title}" />
                         <p class="card-text" th:text="${review.content}" />
 
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" th:data-bs-target="'#update-modal-' + ${review.id}">Update</button>
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#delete-modal-' + ${review.id}">Delete</button>
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" th:data-bs-target="'#update-modal-review-' + ${review.id}">Update</button>
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#delete-modal-review-' + ${review.id}">Delete</button>
 
                         <!--modal(popup) x DELETE-->
-                        <div class="modal fade" th:id="'delete-modal-' + ${review.id}" tabindex="-1" aria-labelledby="delete-modal" aria-hidden="true">
+                        <div class="modal fade" th:id="'delete-modal-review-' + ${review.id}" tabindex="-1" aria-labelledby="delete-modal" aria-hidden="true">
                             <div class="modal-dialog modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -76,7 +76,7 @@
                         </div>
 
                         <!--modal(popup) x PUT-->
-                        <div class="modal fade" th:id="'update-modal-' + ${review.id}" tabindex="-1" aria-labelledby="update-modal"
+                        <div class="modal fade" th:id="'update-modal-review-' + ${review.id}" tabindex="-1" aria-labelledby="update-modal"
                             aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
@@ -126,6 +126,52 @@
         <h4 th:if="${ #lists.isEmpty(pizza.reviews)}" th:text="|No reviews found.|" class="text-muted text-center" />  <!--replaced ex th:unless -->
     </article>   
 
+
+
+    <h2 th:text="|Create new Special Offer|" />
+    <form th:action="@{/specialoffers/{id}/create(id=${pizza.id})}" method="post" th:object="${specialoffer}">  
+        <!--possible also use th:action="${edit}? @{|/reviews/edit/${review.id}|}" : @{|/reviews/create|}  if form create and edit are equal!-->
+            <!--and in the controller add  model.addAttribute("edit", true)
+            return "pizzas/create-or-edit.html" //her in this html there is the form used for both create&edit review-->
+        <!--!!better using th:object x POST actions!-->
+        <input type="hidden" th:field="*{pizza}" id="linked-pizza"> <!--ADD THIS TO RECOVER UR PIZZA AFTER ERRORS/REFRESH!-->
+        
+        <!-- <div th:if="${#fields.hasErrors()}">   don't delete this comment
+                <ul class="alert alert-danger">
+                    <li th:each="error: ${#fields.allErrors()}" th:text="${error}" />
+                </ul>
+        </div> -->
+
+        <div class="form-group">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" class="form-control" id="title" th:field="*{title}" th:errorClass="is-invalid">
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}">
+                <ul>
+                    <li th:each="error : ${#fields.errors('title')}" th:text="${error}" />
+                </ul>
+            </div>
+        </div>
+        <div class="form-group mb-3">
+            <label for="startDate" class="form-label">Start Date</label>
+            <input type="date" class="form-control" id="startDate" th:field="*{startDate}" th:errorClass="is-invalid" required>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('startDate')}">
+                <ul>
+                    <li th:each="error : ${#fields.errors('startDate')}" th:text="${error}" />
+                </ul>
+            </div>
+        </div>
+        <div class="form-group mb-3">
+            <label for="endDate" class="form-label">End Date</label>
+            <input type="date" class="form-control" id="endDate" th:field="*{endDate}" th:errorClass="is-invalid" required>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('endDate')}">
+                <ul>
+                    <li th:each="error : ${#fields.errors('endDate')}" th:text="${error}" />
+                </ul>
+            </div>
+        </div>
+        <button class="btn btn-primary">Submit</button>
+    </form>
+
     <!--all specialoffers-->
     <article class="mb-2">
         <h2>Special Offers</h2>
@@ -138,8 +184,79 @@
                         <h4 class="card-text" th:text="${specialoffer.startDate}" />
                         <h4 class="card-text" th:text="${specialoffer.endDate}" />
 
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" th:data-bs-target="'#update-modal-' + ${review.id}">Update</button>
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#delete-modal-' + ${review.id}">Delete</button>
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" th:data-bs-target="'#update-modal-specialoffer-' + ${specialoffer.id}">Update</button>
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#delete-modal-specialoffer-' + ${specialoffer.id}">Delete</button>
+
+                        <!--modal(popup) x DELETE-->
+                        <div class="modal fade" th:id="'delete-modal-specialoffer-' + ${specialoffer.id}" tabindex="-1" aria-labelledby="delete-modal" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModallabel">
+                                            Deleting "[[${specialoffer.title}]]"
+                                        </h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want deleted the special offer with title <strong>"[[${specialoffer.title}]]"</strong>?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <form th:action="@{/specialoffers/delete/{id}(id=${specialoffer.id})}" method="post" class="d-inline-block">
+                                            <input type="hidden" name="_method" value="delete" />  <!--spring doesn't accept DELETE in the form, but with POST+ _method&value yes-->
+                                            <button type="submit" class="btn btn-danger">Delete</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <!--modal(popup) x PUT-->
+                        <div class="modal fade" th:id="'update-modal-specialoffer-' + ${specialoffer.id}" tabindex="-1" aria-labelledby="update-modal"
+                            aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5">Update Special Offer</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div> 
+                                    <div class="modal-body">
+                                        <form th:action="@{/specialoffers/update/{id}(id=${specialoffer.id})}" method="post" th:object="${specialoffer}">  <!-- th:object="${review}" -->
+                                            
+                                            <input type="hidden" name="pizza" th:value="${specialoffer.pizza?.id}" id="linked-pizza">  
+                                            <input type="hidden" name="_method" value="put" />  <!--spring doesn't accept PUT in the form, but with POST+ _method&value yes-->
+                                        <!-- <div th:if="${#fields.hasErrors()}">   don't delete this comment
+                                                <ul class="alert alert-danger">
+                                                    <li th:each="error: ${#fields.allErrors()}" th:text="${error}" />
+                                                </ul>
+                                            </div> -->
+                                            
+                                            <div class="mb-3">
+                                                <label for="title" class="form-label">Title</label>  <!--th:object SHOULD FILL THE FIELDS!!-->
+                                                <input type="text" class="form-control" th:field="*{title}" placeholder="Title" required >  <!--th:errorClass="is-invalid",   IT'S BETTER USING th:field instead of name&th:value x automatic data binding and spring validations-->
+                                                <!--<div class="invalid-feedback" th:if="${#fields.hasErrors('title')}">  SHOW ERROR RENDER INVALID FIELD 
+                                                    <ul>
+                                                        <li th:each="error : ${#fields.errors('title')}" th:text="${error}" />
+                                                    </ul>
+                                                </div>-->
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="startDate" class="form-label">Start Date</label>
+                                                <input type="date" class="form-control" th:field="*{startDate}" required >
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="endDate" class="form-label">End Date</label>
+                                                <input type="date" class="form-control" th:field="*{endDate}" required >
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                <button type="submit" class="btn btn-primary">Save Changes</button>
+                                            </div>
+                                        </form> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
 
                     </div>
                 </div>
