--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -10,17 +10,16 @@
 <body>
     <div class="container">
     <!-- <h2 th:text="${pizza.reviews}" /> -->
-    <h1 th:text="|Details pizza '${pizza.title}'|" class="mb-2"/>
-
+    <h1 th:text="|Details pizza '${pizza.title}'|" class="mb-2 pt-4"/>
     <h2 th:text="|Create new Review|" />
-    <form th:action="@{/reviews/{id}/create(id=${pizza.id})}" method="post" th:object="${review}" class="mb-2"> 
+    <form th:action="@{/reviews/{id}/create(id=${pizza.id})}" method="post" th:object="${review}" class="mb-4"> 
         <input type="hidden" th:field="*{pizza}" id="linked-review">  
         <!-- <div th:if="${#fields.hasErrors()}">   don't delete this comment
                 <ul class="alert alert-danger">
                     <li th:each="error: ${#fields.allErrors()}" th:text="${error}" />
                 </ul>
         </div> -->
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label for="title" class="form-label">Title</label>
             <input type="text" class="form-control" id="title" th:field="*{title}" th:errorClass="is-invalid"> 
             <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}">  
@@ -29,7 +28,7 @@
                 </ul>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label for="content" class="form-label">Content</label>
             <input type="text" class="form-control" id="content" th:field="*{content}">
         </div>
@@ -37,7 +36,7 @@
      </form> 
   
     <!--all reviews-->
-    <article class="mb-2">
+    <article class="mb-5">
         <h2>Reviews</h2>
         <!-- <h3 th:if="${reviews == null}" th:text="|non-existing reviews!|" class="text-muted text-center" /> -->
         <div class="row g-3" th:if="${not #lists.isEmpty(pizza.reviews)}">   
@@ -129,7 +128,7 @@
 
 
     <h2 th:text="|Create new Special Offer|" />
-    <form th:action="@{/specialoffers/{id}/create(id=${pizza.id})}" method="post" th:object="${specialoffer}">  
+    <form th:action="@{/specialoffers/{id}/create(id=${pizza.id})}" method="post" th:object="${specialoffer}" class="mb-3">  
         <!--possible also use th:action="${edit}? @{|/reviews/edit/${review.id}|}" : @{|/reviews/create|}  if form create and edit are equal!-->
             <!--and in the controller add  model.addAttribute("edit", true)
             return "pizzas/create-or-edit.html" //her in this html there is the form used for both create&edit review-->
