--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
 
-        <div class="text-end">
+        <div class="text-end d-flex gap-2 justify-content-end">
             <a th:href="@{/ingredients}" class="btn btn-warning text-primary mb-4">Ingredients 🌎</a>
             <a th:href="@{/pizzas/create}" class="btn btn-primary mb-4">Create New Pizza 🍕</a>
         </div>
