--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -7,8 +7,8 @@
         <div class="container-fluid d-flex"
             th:classappend="${page == 'home' ? '' : 'justify-content-end'}">
 
-            <a th:if="${page != 'home'}" th:href="@{/}" class="navbar-brand">
-                <img src="/images/logo.png" alt="Logo" width="80" height="auto">
+            <a th:if="${page != 'home'}" th:href="@{/}" class="navbar-brand ">
+                <img src="/images/logo.png" alt="Logo" width="78" height="78">
             </a>
 
             <!-- Mobile Navbar Toggle Button -->
